--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
 			<div id="menu" class="navegacion">
 				<ul>
 					<li>
-						<a href="#">Inicio</a>
+						<a href="#">Informazioni</a>
 					</li>
 					<li>
-						<a href="tel: +34123456789">Servicios</a>
+						<a href="tel: +34123456789">Servizi</a>
 					</li>
 					<li>
 						<a href="#">Prodotti</a>
 					</li>
 					<li>
-						<a href="mailto:123456@hotmail.com">Contactos</a>
+						<a href="mailto:123456@hotmail.com">Contatti</a>
 					</li>
 					<li>
 						<a href="#">Blog</a>
@@ -45,23 +45,23 @@
 			<div class="uno">
 				<h1>RECIÉN HORNEADO,<br>TODOS LOS DÍAS.</h1><hr><br>
 			
-				<p align="center">Chocolate cake chocolate cake pie candy cane chocolate cake bombon. I love marzipan loquorice I love cake chupa chups. Pie danish macaroon ice cream ice cream. Bonbon sweet bonbon jelly beans jelly-o I love lollipop </p>
+				<p align="center"> Pasticceria napoletana e non solo.Ogni giorno ricette calde.Dai babbà ai muffin tradizionali. </p>
 			</div>
 
 			<!-- Contenido de clase "dos"-->
 
 			<div class="dos">
-				<h2 align="center">VEN AL BRUNCH DE <br>LOS DOMINGOS</h2><br>
+				<h2 align="center">LASCIA UN CAFFE' <br>SOSPESO</h2><br>
 
-				<p align="center">Sesame snaps icing chocolate bar. I love donut powder sesame snaps. Jelly-o topping caramels. Sugar Plum I love gummi bears. Bonbon sweet bonbon jelly beans jelly-o.</p>	
+				<p align="center">. Il caffè sospeso è un'abitudine filantropica di Napoli. E' il dono della consumazione di una tazzina di caffè espresso a beneficio di uno sconosciuto.</p>	
 			</div>
 
 			<!--Contenido de clase "tres"-->
 
 			<div class="tres">
-				<h2 align="center">CELEBRA TUS FIESTAS<br>CON NOSOTROS</h2><br>
+				<h2 align="center">NON SOLO UN BUON <br>CAFFE'</h2><br>
 
-				<p align="center">Sesame snaps icing chocolate bar. I love donut powder sesame snaps. Jelly-o topping caramels. Sugar Plum I love gummi bears. Bonbon sweet bonbon jelly beans jelly-o</p>
+				<p align="center"> OKLUCA</p>
 			</div>
 
 			<div class="cuatro">
