--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="tres">
 				<h2 align="center">NON SOLO UN BUON <br>CAFFE'</h2><br>
 
-				<p align="center"> OKLUCA</p>
+				<p align="center"> tradizione&avanguardia. Una miscela che ti ricorda casa</p>
 			</div>
 
 			<div class="cuatro">
